main.css
:root {
    color-scheme: dark;
}

body {
    display: flex;
    flex-direction: column;
    font-family: "Chakra Petch", sans-serif;
    font-size: 21px;
    background-image: url("img/lines.png"), linear-gradient(rgb(5, 0, 0), rgb(39, 0, 0));
    background-repeat: repeat;
    background-size: 512px;
    color: white;
    margin: 0;
    padding: 0;
    overflow-wrap: break-word;
    min-height: 100vh;
}

a {
    display: flex;
    justify-content: center;
    align-items: center;
    color: red;
}

hr {
    color: rgb(255, 255, 255, 0.5);
}

.navbutton {
    font-family: inherit;
    font-size: inherit;
    color: white;
    background-color: rgb(0, 0, 0);
    border: none;
    text-decoration: none;
    padding: 0;
    cursor: pointer;
    width: 110px;
    height: 100%;
    transition-duration: 0.2s;
}

.navbutton:hover {
    background-color: rgb(238, 0, 0);
    color: black;
    transition-duration: 0.2s;
}

.collapsible {
    font-family: inherit;
    font-size: 30px;
    color: white;
    background-color: rgb(35, 35, 35, 0.55);
    border: none;
    text-decoration: none;
    border-radius: 12px;
    cursor: pointer;
    text-align: left;
    font-weight: bold;
    width: 100%;
    height: 43px;
    padding-left: 10px;
    padding-right: 10px;
    transition-duration: 0.2s;
    margin-bottom: 10px;
}

.collapsible:after {
    content: "+";
    float: right;
}

.collapsibleactive, .collapsible:hover {
    background-color: rgb(70, 70, 70, 0.65);
    transition-duration: 0.1s;
}

.collapsibleactive:after {
    content: "-"
}

.collapsiblecontent {
    overflow: hidden;
    background-color: rgb(0, 0, 0, 0.25);
    border-radius: 12px;
    padding-left: 15px;
    padding-right: 15px;
    max-height: 0;
    transition: max-height 0.1s ease-out;
}

.topheader {
    display: flex;
    background-color: rgb(0, 0, 0);
    position: fixed;
    top: 0;
    z-index: 99;
    height: 69px;
    width: 100%;
}

.topheadercontent {
    display: flex;
    margin-left: 25px;
    align-items: stretch;
}

.topnav {
    display: flex;
    margin-left: 25px;
}

.maincontent {
    display: flex;
    flex-direction: column;
    margin: auto;
    background-color: rgba(0, 0, 0, 0.25);
    border-radius: 25px;
    margin-top: 20px;
    max-width: 960px;
    min-width: 960px;
    padding-right: 25px;
    padding-left: 25px;
    row-gap: 30px;
    padding-bottom: 16px;
}

.title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    min-height: calc(100svh - 26px);
    font-size: 80px;
}

.footer {
    background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.5));
    margin: 0px;
    padding: 16px;
    padding-top: 64px;
    border: 0px;
    text-align: center;
    bottom: 0;
}

.projecttitle {
    display: flex;
    align-items: end;
    gap: 10px;
    transform-origin: left bottom;
    scale: 0.9;
}

.projectdate {
    padding-bottom: 5px;
}

.maximizedimagebg {
    background-color: rgb(0, 0, 0, 0.5);
    display: none;
    position: fixed;
    z-index: 999;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.maximizedimage {
    max-width: 80%;
    max-height: 80%;
    width: auto;
    height: auto;
}

.zoomcursor {
    cursor: zoom-in;
}

.zoomoutcursor {
    cursor: zoom-out;
}

.muted {
    color: rgba(255, 255, 255, 0.5);
}

.hidden {
    opacity: 0;
    transform: translateY(25px);
    transition: all 0.8s;
}

.show {
    opacity: 1;
    transform: translateY(0);
}

.trimtop {
    margin-top: 5px;
}

.trimbottom {
    margin-bottom: 5px;
}

.fulltrimtop {
    margin-top: 0px;
}

.fulltrimbottom {
    margin-bottom: 0px;
}

.topheadermargin {
    margin-top: 130px;
}

.center {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.horizontallayout {
    display: flex;
    gap: 15px;
}

.horizontallayoutcenter {
    justify-content: center;
}

.horizontalscroll {
    overflow-x: auto;
}

.rounded {
    border-radius: 12px;
}

.automargin {
    margin: auto;
}

@media (max-width: 600px) or (pointer: coarse) {
    .title {
        font-size: 50px;
    }

    .logo {
        display: none;
    }

    .topheadermargin {
        margin-top: 73px;
    }

    .topheader {
        justify-content: center;
    }

    .topheadercontent {
        margin-left: 0px;
        justify-content: center;
    }

    .topnav {
        margin-left: 0px;
    }

    .navbutton {
        width: 90px;
    }

    .projectname {
        font-size: 40px;
    }
}

@media (max-width: 960px) or (pointer: coarse) {
    .maincontent {
        min-width: 0px;
        margin-left: 12px;
        margin-right: 12px;
        padding-right: 15px;
        padding-left: 15px;
    }
}

